# panacea

./: .gitignore  Doxyfile  Doxyfile.in  Makefile  Makefile.in  README.md  annotated.html  classes.html  classpanacea-members.html  classpanacea.html  config_8hpp_source.html  configure  configure.ac  dir_000002_000001.html  dir_000003_000001.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.dot  dir_3b46db073de4de62b02cb55c32a327b7.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.dot  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_rela.html  globals.html  globals_func.html  globals_vars.html  graph_legend.html  index.html  main.cpp  md_README.html  menudata.js  pages.html  panacea_8hpp.html  panacea_8hpp__incl.dot  panacea_8hpp_source.html
.github/workflows/: c-cpp.yml
extdata/: test.json  test.txt
include/: panacea.hpp
search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  related_0.js  searchdata.js  variables_0.js  variables_1.js  variables_2.js
spike/: seperator-frequency.cpp
src/: Makefile  Makefile.in  config.hpp.in  create-regex.cpp  decompose-text.cpp  detect-assign-operator.cpp  detect-dates.cpp  detect-numeric-vars.cpp  detect-tables.cpp  helper.cpp  main.cpp  panacea.cpp  panacea.hpp  utils.cpp
test/: Makefile  Makefile.in  test-create-regex.cpp  test-detect-assign-operator.cpp  test-main.cpp  test-panacea.cpp  test-utils.cpp
